# asciimatics

./: .codacy.yml  .gitignore  .landscape.yml  .pylintrc  .readthedocs.yaml  .stickler.yml  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  appveyor.yml  builddocs.sh  coverage_fix.py  noserun.bat  noserun.sh  requirements.txt  setup.cfg  setup.py
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
asciimatics/: __init__.py  constants.py  effects.py  event.py  exceptions.py  parsers.py  particles.py  paths.py  renderers.py  scene.py  screen.py  sprites.py  strings.py  utilities.py  version.py  widgets.py
asciimatics/renderers/: .base.py.swp  box.py  (+15 more)
doc/: build.sh  rendering.rst
requirements/: base.txt  dev.txt
samples/: 256colour.py  bars.py  basics.py  bg_colours.py  cogs.py  contact_list.py  credits.py  experimental.py  fire.py  fireworks.py  form_readbox.py  forms.py  frame_borders.py  fruit.ans  images.py  interactive.py  julia.py  kaleidoscope.py  maps.py  noise.py  not_curses.py  pacman.py  particles.py  plasma.py  player.py  puck_man.py  quick_model.py  ray_casting.py  rendering.py  simple.py  tab_demo.py  terminal.py  test.py  top.py  treeview.py  vbars.py  vh_bars.py  win_demo.py  xmas.py
tests/: mock_objects.py  test.ans  test_effects.py  test_events.py  test_exceptions.py  test_parsers.py  test_particles.py  test_paths.py  test_renderers.py  test_scene.py  test_screen.py  test_sprites.py  test_strings.py  test_utilities.py  test_widgets.py
(+164 files in other folders)
